@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<form string="Request Reference" col="2">
-    <label name="request"/>
-    <field name="request"/>
-    <label name="reference"/>
-    <field name="reference"/>
-</form>
